--- a/src/main/resources/com/uniquindio/subastasUQ/IncioSesion.fxml
+++ b/src/main/resources/com/uniquindio/subastasUQ/IncioSesion.fxml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
@@ -15,36 +15,44 @@
    <children>
       <BorderPane layoutY="6.0" prefHeight="447.0" prefWidth="634.0">
          <right>
-            <AnchorPane prefHeight="447.0" prefWidth="335.0" style="-fx-background-color: #fcfcfa;" BorderPane.alignment="CENTER">
+            <AnchorPane fx:id="Principal" prefHeight="447.0" prefWidth="335.0" style="-fx-background-color: #fcfcfa;" stylesheets="@../../../Decoration/Inicio.css" BorderPane.alignment="CENTER">
                <children>
-                  <TextField fx:id="txtIngresoEmail" layoutX="89.0" layoutY="170.0" promptText="Email" style="-fx-background-color: transparent; -fx-border-color: #0598ff; -fx-border-width: 0px 0px 2px 0px;" />
-                  <Hyperlink layoutX="91.0" layoutY="372.0" text="¿Olvidaste tu contraseña?" />
-                  <PasswordField fx:id="txtIngresoContraseña" layoutX="81.0" layoutY="246.0" promptText="Contraseña" style="-fx-background-color: transparent; -fx-border-color: #0598ff; -fx-border-width: 0px 0px 2px 0px;" />
-                  <Button fx:id="btnInicioSesion" layoutX="126.0" layoutY="314.0" mnemonicParsing="false" onAction="#AccederAction" style="-fx-background-color: #0598ff;" text="Acceder" textFill="#ebe7e7" />
-                  <Text fill="#0598ff" layoutX="81.0" layoutY="138.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Inicio de sesión de usuario" textAlignment="JUSTIFY">
+                  <TextField fx:id="txtIngresoEmail" layoutX="89.0" layoutY="143.0" promptText="Email" style="-fx-background-color: transparent; -fx-border-color: #0598ff; -fx-border-width: 0px 0px 2px 0px;">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </TextField>
+                  <Hyperlink fx:id="olvidoContraseña" layoutX="91.0" layoutY="372.0" onAction="#recuperarContraseñaAction" text="¿Olvidaste tu contraseña?" />
+                  <PasswordField fx:id="txtIngresoContraseña" layoutX="88.0" layoutY="197.0" promptText="Contraseña" style="-fx-background-color: transparent; -fx-border-color: #0598ff; -fx-border-width: 0px 0px 2px 0px;" styleClass="C:\Users\Carlos Corrales\OneDrive\Documentos\2dProyect2023\2dProyect2023\2dProyect2023\2023Proyecto\src\main\resources\Decoration\Inicio.css">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </PasswordField>
+                  <Button fx:id="btnInicioSesion" layoutX="126.0" layoutY="314.0" mnemonicParsing="false" onMouseClicked="#Seleccionar" stylesheets="@../../../Decoration/Inicio.css" text="Acceder" textFill="#9e2424">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
+                  <Text fill="#0598ff" layoutX="81.0" layoutY="119.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Inicio de sesión de usuario" textAlignment="JUSTIFY">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Text>
-                  <ImageView fitHeight="106.0" fitWidth="200.0" layoutX="103.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../../../java/com/uniquindio/subastasUQ/image/OIP.jpeg" />
-                     </image>
-                  </ImageView>
+                  <CheckBox fx:id="CheckAnunciante" layoutX="38.0" layoutY="264.0" mnemonicParsing="false" onMouseClicked="#CompradorMauseClick" stylesheets="@../../../Decoration/Inicio.css" text="Anunciante">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </CheckBox>
+                  <CheckBox fx:id="CheckComprador" layoutX="185.0" layoutY="264.0" mnemonicParsing="false" onMouseClicked="#CompradorMauseClick" stylesheets="@../../../Decoration/Inicio.css" text="Comprador">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </CheckBox>
                </children>
             </AnchorPane>
          </right>
          <center>
-            <AnchorPane prefHeight="457.0" prefWidth="293.0" style="-fx-background-color: #0598ff;" BorderPane.alignment="CENTER">
-               <children>
-                  <Text layoutX="59.0" layoutY="231.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Subastas Uniquindio">
-                     <font>
-                        <Font size="20.0" />
-                     </font>
-                  </Text>
-                  <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="49.0" layoutY="28.0" pickOnBounds="true" preserveRatio="true" />
-                  <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="40.0" layoutY="28.0" pickOnBounds="true" preserveRatio="true" />
-               </children></AnchorPane>
+            <AnchorPane fx:id="Image" prefHeight="447.0" prefWidth="508.0" stylesheets="@../../../Decoration/Inicio.css" BorderPane.alignment="CENTER" />
          </center>
       </BorderPane>
    </children>
