--- a/src/main/resources/com/uniquindio/subastasUQ/hello-view.fxml
+++ b/src/main/resources/com/uniquindio/subastasUQ/hello-view.fxml
@@ -8,16 +8,23 @@
    <children>
       <TabPane layoutX="1.0" layoutY="-3.0" prefHeight="508.0" prefWidth="666.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
-          <Tab text="Inicio">
+          <Tab fx:id="TabInicio" text="Inicio">
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
                 <fx:include source="IncioSesion.fxml" />
             </content>
           </Tab>
+            <Tab text="Registro">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                  <fx:include source="RegistroUsuario.fxml" />
+
+              </content>
+            </Tab>
             <Tab text="Usuarios">
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                  <fx:include source="AdministracionUsuarios.fxml" />
+                  <fx:include source="UsuariosDatos.fxml" />
               </content>
             </Tab>
         </tabs>
