--- a/src/main/resources/com/uniquindio/subastasUQ/hello-view.fxml
+++ b/src/main/resources/com/uniquindio/subastasUQ/hello-view.fxml
@@ -21,7 +21,7 @@
 
               </content>
             </Tab>
-            <Tab text="Usuarios">
+            <Tab text="Productos">
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
                   <fx:include source="UsuariosDatos.fxml" />
