--- a/src/main/resources/com/uniquindio/subastasUQ/pujas.fxml
+++ b/src/main/resources/com/uniquindio/subastasUQ/pujas.fxml
@@ -3,10 +3,11 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Text?>
 
-
-<AnchorPane fx:id="AnchorPrincipal" prefHeight="492.0" prefWidth="691.0" stylesheets="@../../../Decoration/pujas.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.uniquindio.subastasUQ.controller.view.PujasController">
+<AnchorPane fx:id="AnchorPrincipal" prefHeight="492.0" prefWidth="732.0" stylesheets="@../../../Decoration/pujas.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.uniquindio.subastasUQ.controller.view.PujasController">
    <children>
       <AnchorPane fx:id="AnchorProductos" layoutX="14.0" layoutY="6.0" prefHeight="200.0" prefWidth="544.0" stylesheets="@../../../Decoration/pujas.css">
          <children>
@@ -25,7 +26,7 @@
       </AnchorPane>
       <AnchorPane fx:id="AnchorPuja" layoutX="20.0" layoutY="255.0" prefHeight="200.0" prefWidth="532.0" stylesheets="@../../../Decoration/pujas.css">
          <children>
-            <TableView fx:id="tableProductos" layoutX="103.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <TableView fx:id="tableProductos" layoutX="2.0" layoutY="2.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="2.0" AnchorPane.rightAnchor="2.0" AnchorPane.topAnchor="2.0">
               <columns>
                 <TableColumn fx:id="tableCOolumnPuja" prefWidth="75.0" text="C1" />
                 <TableColumn prefWidth="75.0" text="C2" />
@@ -38,7 +39,9 @@
             </TableView>
          </children>
       </AnchorPane>
-      <Button fx:id="btnPujas" layoutX="602.0" layoutY="172.0" mnemonicParsing="false" stylesheets="@../../../Decoration/pujas.css" text="Pujar" />
-      <Button fx:id="btnEliminarPuja" layoutX="581.0" layoutY="255.0" mnemonicParsing="false" stylesheets="@../../../Decoration/pujas.css" text="Eliminar puja" />
+      <Button fx:id="btnPujas" layoutX="614.0" layoutY="81.0" mnemonicParsing="false" stylesheets="@../../../Decoration/pujas.css" text="Pujar" />
+      <Button fx:id="btnEliminarPuja" layoutX="581.0" layoutY="430.0" mnemonicParsing="false" stylesheets="@../../../Decoration/pujas.css" text="Eliminar puja" />
+      <Text layoutX="624.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
+      <TextField fx:id="txtxValorPuja" layoutX="574.0" layoutY="42.0" prefHeight="25.0" prefWidth="122.0" />
    </children>
 </AnchorPane>
