--- a/src/main/resources/com/uniquindio/subastasUQ/Productos.fxml
+++ b/src/main/resources/com/uniquindio/subastasUQ/Productos.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="490.0" prefWidth="828.0" style="-fx-background-color: #f2f4f5; -fx-border-width: 0px 0px 2px 0px;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.uniquindio.subastasUQ.controller.view.ProductosController">
+<AnchorPane prefHeight="490.0" prefWidth="828.0" style="-fx-background-color: #f2f4f5; -fx-border-width: 0px 0px 2px 0px;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.uniquindio.subastasUQ.controller.view.PujasController">
     <children>
         <Label layoutX="222.0" layoutY="14.0" style="-fx-border-width: 0px 0px 2px 0px;" text="Productos" textFill="#222020">
             <font>
