--- a/src/main/resources/com/uniquindio/subastasUQ/Productos.fxml
+++ b/src/main/resources/com/uniquindio/subastasUQ/Productos.fxml
@@ -7,25 +7,25 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="490.0" prefWidth="766.0" style="-fx-background-color: #f2f4f5; -fx-border-width: 0px 0px 2px 0px;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.uniquindio.subastasUQ.controller.view.ProductosController">
+<AnchorPane prefHeight="490.0" prefWidth="663.0" style="-fx-background-color: #f2f4f5; -fx-border-width: 0px 0px 2px 0px;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.uniquindio.subastasUQ.controller.view.ProductosController">
     <children>
-        <Label layoutX="276.0" layoutY="14.0" style="-fx-border-width: 0px 0px 2px 0px;" text="Productos" textFill="#222020">
+        <Label layoutX="227.0" layoutY="14.0" style="-fx-border-width: 0px 0px 2px 0px;" text="Productos" textFill="#222020">
             <font>
                 <Font size="36.0" />
             </font>
         </Label>
-        <TableView fx:id="tableUsuarios" layoutX="1.0" layoutY="70.0" prefHeight="359.0" prefWidth="755.0">
+        <TableView fx:id="tableUsuarios" layoutX="1.0" layoutY="70.0" prefHeight="359.0" prefWidth="655.0">
             <columns>
-                <TableColumn fx:id="columnNumeral" prefWidth="39.0" text="#" />
-                <TableColumn fx:id="columnNombre" prefWidth="88.0" text="Nombre" />
-                <TableColumn fx:id="columnTipoProducto" prefWidth="87.0" text="Tipo producto" />
-                <TableColumn fx:id="columnDescripcion" prefWidth="104.0" text="Descripción" />
-                <TableColumn fx:id="columnNombreAnunciante" prefWidth="134.0" text="Nombre anunciante" />
-            <TableColumn fx:id="columnFechaInicio" prefWidth="104.0" text="Fecha inicio" />
-            <TableColumn fx:id="columnFechaFinal" prefWidth="83.0" text="Fecha final" />
-            <TableColumn fx:id="columnValorInicial" prefWidth="112.0" text="Valor inicial" />
+                <TableColumn fx:id="columnNumeral" prefWidth="14.0" text="#" />
+                <TableColumn fx:id="columnNombre" prefWidth="78.0" text="Nombre" />
+                <TableColumn fx:id="columnTipoProducto" prefWidth="84.0" text="T.Producto" />
+                <TableColumn fx:id="columnDescripcion" prefWidth="111.0" text="Descripción" />
+                <TableColumn fx:id="columnNombreAnunciante" prefWidth="135.0" text="N.Anunciante" />
+            <TableColumn fx:id="columnFechaInicio" prefWidth="72.0" text="F. Inicio" />
+            <TableColumn fx:id="columnFechaFinal" prefWidth="91.0" text="F. FInal" />
+            <TableColumn fx:id="columnValorInicial" prefWidth="69.0" text="V.inicial" />
             </columns>
         </TableView>
-      <Button fx:id="btnPujar" layoutX="706.0" layoutY="439.0" mnemonicParsing="false" onAction="#actionPujar" text="Pujar" />
+      <Button fx:id="btnPujar" layoutX="562.0" layoutY="440.0" mnemonicParsing="false" onAction="#actionPujar" text="Pujar" />
     </children>
 </AnchorPane>
