--- a/src/main/resources/com/uniquindio/subastasUQ/Anunciante.fxml
+++ b/src/main/resources/com/uniquindio/subastasUQ/Anunciante.fxml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="477.0" prefWidth="714.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.uniquindio.subastasUQ.controller.view.controllerAnunciante">
+<AnchorPane prefHeight="477.0" prefWidth="714.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.uniquindio.subastasUQ.controller.view.controllerAnunciante">
    <children>
       <AnchorPane layoutX="162.0" layoutY="81.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -12,7 +13,12 @@
               <tabs>
                 <Tab>
                   <content>
-                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                           <children>
+                              <Button layoutX="626.0" layoutY="2.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="82.0" text="Regresar" />
+                               <fx:include source="CrearAnuncio.fxml"/>
+                           </children></AnchorPane>
+
                   </content>
                 </Tab>
                 <Tab>
