--- a/src/main/resources/com/uniquindio/subastasUQ/agregarProducto.fxml
+++ b/src/main/resources/com/uniquindio/subastasUQ/agregarProducto.fxml
@@ -17,8 +17,9 @@
       <TextField fx:id="txtNombreProducto" layoutX="65.0" layoutY="99.0" promptText="Nombre producto" />
       <ComboBox fx:id="comboBoxTiṕoProducto" layoutX="256.0" layoutY="99.0" prefWidth="150.0" promptText="tipo de producto" />
       <TextField fx:id="txtDescripcionProducto" layoutX="49.0" layoutY="145.0" prefHeight="217.0" prefWidth="564.0" promptText="Descripción del producto" />
-      <TextField layoutX="465.0" layoutY="99.0" promptText="Valor inicial del producto" />
+      <TextField fx:id="txtValorInicialProducto" layoutX="465.0" layoutY="99.0" promptText="Valor inicial del producto" />
       <Button fx:id="btnPublicar" layoutX="540.0" layoutY="386.0" mnemonicParsing="false" onAction="#actionPublicar" text="Publicar" />
       <Button fx:id="btnVaciarEspacios" layoutX="377.0" layoutY="386.0" mnemonicParsing="false" onAction="#actionVaciarEspacios" text="Vaciar espacios" />
+      <Button fx:id="btnRegresar" layoutX="630.0" layoutY="11.0" mnemonicParsing="false" onAction="#RegresarAction" text="Regresar" />
    </children>
 </AnchorPane>
