--- a/src/main/resources/com/uniquindio/subastasUQ/agregarProducto.fxml
+++ b/src/main/resources/com/uniquindio/subastasUQ/agregarProducto.fxml
@@ -7,19 +7,21 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="456.0" prefWidth="696.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.uniquindio.subastasUQ.controller.view.controllerAgregarProducto">
+<AnchorPane fx:id="anchorAbajo" prefHeight="445.0" prefWidth="696.0" stylesheets="@../../../Decoration/AgregarProductos.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.uniquindio.subastasUQ.controller.view.controllerAgregarProducto">
    <children>
-      <Label layoutX="236.0" layoutY="23.0" text="Publicar producto">
+      <Label layoutX="236.0" layoutY="23.0" stylesheets="@../../../Decoration/AgregarProductos.css" text="Publicar producto">
          <font>
             <Font size="24.0" />
          </font>
       </Label>
-      <TextField fx:id="txtNombreProducto" layoutX="65.0" layoutY="99.0" promptText="Nombre producto" />
-      <ComboBox fx:id="comboBoxTiṕoProducto" layoutX="256.0" layoutY="99.0" prefWidth="150.0" promptText="tipo de producto" />
-      <TextField fx:id="txtDescripcionProducto" layoutX="49.0" layoutY="145.0" prefHeight="217.0" prefWidth="564.0" promptText="Descripción del producto" />
-      <TextField fx:id="txtValorInicialProducto" layoutX="465.0" layoutY="99.0" promptText="Valor inicial del producto" />
-      <Button fx:id="btnPublicar" layoutX="540.0" layoutY="386.0" mnemonicParsing="false" onAction="#actionPublicar" text="Publicar" />
-      <Button fx:id="btnVaciarEspacios" layoutX="377.0" layoutY="386.0" mnemonicParsing="false" onAction="#actionVaciarEspacios" text="Vaciar espacios" />
-      <Button fx:id="btnRegresar" layoutX="630.0" layoutY="11.0" mnemonicParsing="false" onAction="#RegresarAction" text="Regresar" />
+      <TextField fx:id="txtNombreProducto" layoutX="25.0" layoutY="135.0" prefHeight="25.0" prefWidth="165.0" stylesheets="@../../../Decoration/AgregarProductos.css" />
+      <ComboBox fx:id="comboBoxTiṕoProducto" layoutX="33.0" layoutY="312.0" prefWidth="150.0" promptText="tipo de producto" stylesheets="@../../../Decoration/AgregarProductos.css" />
+      <TextField fx:id="txtDescripcionProducto" layoutX="272.0" layoutY="83.0" prefHeight="278.0" prefWidth="384.0" promptText="Descripción del producto" stylesheets="@../../../Decoration/AgregarProductos.css" />
+      <TextField fx:id="txtValorInicialProducto" layoutX="33.0" layoutY="245.0" stylesheets="@../../../Decoration/AgregarProductos.css" />
+      <Button fx:id="btnPublicar" layoutX="616.0" layoutY="399.0" mnemonicParsing="false" onAction="#actionPublicar" stylesheets="@../../../Decoration/AgregarProductos.css" text="Publicar" />
+      <Button fx:id="btnVaciarEspacios" layoutX="377.0" layoutY="399.0" mnemonicParsing="false" onAction="#actionVaciarEspacios" stylesheets="@../../../Decoration/AgregarProductos.css" text="Vaciar espacios" />
+      <Button fx:id="btnRegresar" layoutX="630.0" layoutY="11.0" mnemonicParsing="false" onAction="#RegresarAction" stylesheets="@../../../Decoration/AgregarProductos.css" text="Regresar" />
+      <Label layoutX="25.0" layoutY="112.0" text="Nombre producto" />
+      <Label layoutX="33.0" layoutY="223.0" text="Valor inicial producto" />
    </children>
 </AnchorPane>
