--- a/src/main/resources/com/uniquindio/subastasUQ/agregarProducto.fxml
+++ b/src/main/resources/com/uniquindio/subastasUQ/agregarProducto.fxml
@@ -49,6 +49,11 @@
                   <Insets bottom="10.0" left="350.0" right="10.0" />
                </HBox.margin>
             </Text>
+            <Button fx:id="btnRegresar" mnemonicParsing="false" onAction="#ActionRegresar" text="Regresar">
+               <HBox.margin>
+                  <Insets left="70.0" />
+               </HBox.margin>
+            </Button>
          </children>
       </HBox>
       <HBox fx:id="hboxNombreAnunciante" layoutX="20.0" layoutY="328.0" prefHeight="29.0" prefWidth="200.0">
@@ -81,9 +86,9 @@
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Fecha publicación" wrappingWidth="188.494140625" />
          </children>
       </HBox>
-      <HBox layoutX="607.0" layoutY="323.0" prefHeight="40.0" prefWidth="200.0">
+      <HBox layoutX="607.0" layoutY="323.0" prefHeight="40.0" prefWidth="232.0">
          <children>
-            <TextField fx:id="txtFechaPublicación" prefHeight="25.0" prefWidth="189.0" />
+            <TextField fx:id="txtFechaPublicación" prefHeight="25.0" prefWidth="236.0" style="-fx-background-color: transparent; -fx-border-color: BLACK; -fx-border-width: 0px 0px 2px 0px;" />
          </children>
       </HBox>
       <HBox fx:id="hboxPublicarProducto" layoutX="737.0" layoutY="541.0" prefHeight="29.0" prefWidth="70.0">
