--- a/src/main/resources/com/uniquindio/subastasUQ/pujas.fxml
+++ b/src/main/resources/com/uniquindio/subastasUQ/pujas.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="AnchorPrincipal" prefHeight="588.0" prefWidth="954.0" stylesheets="@../../../Decoration/pujas.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.uniquindio.subastasUQ.controller.view.PujasController">
+<AnchorPane fx:id="AnchorPrincipal" prefHeight="588.0" prefWidth="908.0" stylesheets="@../../../Decoration/pujas.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.uniquindio.subastasUQ.controller.view.PujasController">
    <children>
       <AnchorPane fx:id="AnchorProductos" layoutX="14.0" layoutY="58.0" prefHeight="217.0" prefWidth="702.0" stylesheets="@../../../Decoration/pujas.css">
          <children>
@@ -41,9 +41,9 @@
             </TableView>
          </children>
       </AnchorPane>
-      <Button fx:id="btnPujas" layoutX="841.0" layoutY="94.0" mnemonicParsing="false" onAction="#ActionPujar" stylesheets="@../../../Decoration/pujas.css" text="Pujar" />
-      <Button fx:id="btnEliminarPuja" layoutX="842.0" layoutY="542.0" mnemonicParsing="false" onAction="#actionEliminarPuja" stylesheets="@../../../Decoration/pujas.css" text="Eliminar puja" />
-      <Text layoutX="851.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
-      <TextField fx:id="txtxValorPuja" layoutX="801.0" layoutY="45.0" prefHeight="25.0" prefWidth="122.0" />
+      <Button fx:id="btnPujas" layoutX="792.0" layoutY="128.0" mnemonicParsing="false" onAction="#ActionPujar" stylesheets="@../../../Decoration/pujas.css" text="Pujar" />
+      <Button fx:id="btnEliminarPuja" layoutX="771.0" layoutY="537.0" mnemonicParsing="false" onAction="#actionEliminarPuja" stylesheets="@../../../Decoration/pujas.css" text="Eliminar puja" />
+      <Text layoutX="746.0" layoutY="71.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Valor para la puja" />
+      <TextField fx:id="txtxValorPuja" layoutX="740.0" layoutY="92.0" prefHeight="25.0" prefWidth="122.0" />
    </children>
 </AnchorPane>
