--- a/src/main/resources/com/uniquindio/subastasUQ/pujas.fxml
+++ b/src/main/resources/com/uniquindio/subastasUQ/pujas.fxml
@@ -41,9 +41,10 @@
             </TableView>
          </children>
       </AnchorPane>
-      <Button fx:id="btnPujas" layoutX="792.0" layoutY="128.0" mnemonicParsing="false" onAction="#ActionPujar" stylesheets="@../../../Decoration/pujas.css" text="Pujar" />
+      <Button fx:id="btnPujas" layoutX="780.0" layoutY="186.0" mnemonicParsing="false" onAction="#ActionPujar" stylesheets="@../../../Decoration/pujas.css" text="Pujar" />
       <Button fx:id="btnEliminarPuja" layoutX="771.0" layoutY="537.0" mnemonicParsing="false" onAction="#actionEliminarPuja" stylesheets="@../../../Decoration/pujas.css" text="Eliminar puja" />
-      <Text layoutX="746.0" layoutY="71.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Valor para la puja" />
-      <TextField fx:id="txtxValorPuja" layoutX="740.0" layoutY="92.0" prefHeight="25.0" prefWidth="122.0" />
+      <Text layoutX="755.0" layoutY="134.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Valor para la puja" />
+      <TextField fx:id="txtxValorPuja" layoutX="741.0" layoutY="154.0" prefHeight="25.0" prefWidth="122.0" />
+      <Button fx:id="btnRegresar" layoutX="838.0" layoutY="14.0" mnemonicParsing="false" onAction="#ActionRegresar" text="Regresar" />
    </children>
 </AnchorPane>
