--- a/src/main/resources/com/uniquindio/subastasUQ/publicaciones.fxml
+++ b/src/main/resources/com/uniquindio/subastasUQ/publicaciones.fxml
@@ -12,20 +12,20 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="580.0" prefWidth="860.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.uniquindio.subastasUQ.controller.view.controllerPublicaciones">
+<AnchorPane prefHeight="580.0" prefWidth="830.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.uniquindio.subastasUQ.controller.view.controllerPublicaciones">
    <children>
       <HBox fx:id="hboxtable" layoutX="293.0" layoutY="94.0" prefHeight="313.0" prefWidth="576.0">
          <children>
-            <TableView prefHeight="313.0" prefWidth="597.0">
+            <TableView fx:id="tablePublicaciones" prefHeight="313.0" prefWidth="597.0">
               <columns>
-                <TableColumn minWidth="0.0" prefWidth="23.0" text="#" />
-                <TableColumn prefWidth="66.0" text="Nombre" />
-                  <TableColumn prefWidth="76.0" text="T.Producto" />
-                  <TableColumn prefWidth="85.0" text="Descripcion" />
-                  <TableColumn prefWidth="97.0" text="N.Anunciante" />
-                  <TableColumn prefWidth="76.0" text="F.Inicio" />
-                  <TableColumn prefWidth="76.0" text="F.Final" />
-                  <TableColumn prefWidth="73.0" text="V.producto" />
+                <TableColumn fx:id="columnId" minWidth="0.0" prefWidth="23.0" text="#" />
+                <TableColumn fx:id="columnNombre" prefWidth="66.0" text="Nombre" />
+                  <TableColumn fx:id="columnTipoProducto" prefWidth="76.0" text="T.Producto" />
+                  <TableColumn fx:id="columnDescripcion" prefWidth="85.0" text="Descripcion" />
+                  <TableColumn fx:id="columnNombreAnunciante" prefWidth="97.0" text="N.Anunciante" />
+                  <TableColumn fx:id="ColumnFechaInicio" prefWidth="76.0" text="F.Inicio" />
+                  <TableColumn fx:id="ColumnFechaFInal" prefWidth="76.0" text="F.Final" />
+                  <TableColumn fx:id="COlumnValorProducto" prefWidth="73.0" text="V.producto" />
               </columns>
             </TableView>
          </children>
@@ -118,7 +118,7 @@
             </TextField>
          </children>
       </HBox>
-      <HBox fx:id="hboxImagenProducto" layoutX="36.0" layoutY="392.0" prefHeight="113.0" prefWidth="233.0">
+      <HBox fx:id="hboxImagenProducto" layoutX="492.0" layoutY="429.0" prefHeight="113.0" prefWidth="233.0">
          <children>
             <ImageView fx:id="imageviewProducto" fitHeight="128.0" fitWidth="233.0" pickOnBounds="true" preserveRatio="true" />
          </children>
@@ -131,6 +131,16 @@
       <HBox fx:id="hboxActuzalizar" layoutX="176.0" layoutY="532.0" prefHeight="25.0" prefWidth="142.0">
          <children>
             <Button fx:id="btnActualizar" mnemonicParsing="false" onAction="#ActionActualizar" prefHeight="25.0" prefWidth="140.0" text="Actualizar" />
+         </children>
+      </HBox>
+      <HBox fx:id="hboxDescripcionProducto" layoutX="115.0" layoutY="357.0" prefHeight="142.0" prefWidth="161.0">
+         <children>
+            <TextField fx:id="txtDescripcion" prefHeight="140.0" prefWidth="163.0" />
+         </children>
+      </HBox>
+      <HBox layoutX="15.0" layoutY="357.0" prefHeight="24.0" prefWidth="106.0">
+         <children>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Descripción" />
          </children>
       </HBox>
    </children>
